<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Biergarten</string>
    <string name="opt_biergarten_einstellung">Einstellungen</string>
    <string name="opt_biergarten_beenden">beenden</string>
    <string name="opt_biergarten_hilfe">Hilfe</string>
    <string name="opt_biergarten_export_csv">Export</string>
    <string name="opt_biergarten_details_editmodus">Edit-Modus</string>
    <string name="opt_biergarten_details_speichern">Speichern</string>
    <string name="opt_biergarten_details_route">Route</string>
    <string name="txt_biergarten_uebersicht_title">Übersicht</string>
    <string name="txt_biergarten_finden_title">Biergarten finden</string>
    <string name="txt_biergarten_eintragen_title">Biergarten eintragen</string>
    <string name="txt_biergarten_favoriten_title">Favoriten</string>
    <string name="txt_biergarten_getraenke_title">Getränke</string>
    <string name="txt_biergarten_speisen_title">Speisen</string>
    <string name="opt_biergarten_maps_style_satelite">Landschafts-Modus</string>
    <string name="opt_biergarten_maps_style_strasse">Straßen-Modus</string>
    <string name="opt_biergarten_maps_style_verkehr">Verkehr-Modus</string>
    <string name="opt_biergarten_maps_show_route">Route</string>
    <string name="txt_biergarten_details_name">Name</string>
    <string name="txt_biergarten_details_strasse">Strasse:</string>
    <string name="txt_biergarten_details_plz">Plz:</string>
    <string name="txt_biergarten_details_ort">Ort:</string>
    <string name="txt_biergarten_details_telefon">Telefon:</string>
    <string name="txt_biergarten_details_email">Email:</string>
    <string name="txt_biergarten_details_url">URL:</string>
    <string name="txt_biergarten_details_latitude">Longitude:</string>
    <string name="txt_biergarten_details_longitude">Latitude:</string>
    <string name="txt_biergarten_details_desc">Info:</string>
    <string name="txt_biergarten_details_desclong">Beschreibung lang:</string>
    <string name="txt_biergarten_details_mass">Mass:</string>
    <string name="txt_biergarten_details_apfelschorle">Apfelschorle:</string>
    <string name="txt_biergarten_details_riesenbrenze">Riesenbrene:</string>
    <string name="txt_biergarten_details_obazda">Obazda:</string>
    <string name="txt_biergarten_details_biermarke">Biermarke:</string>
    <string name="txt_biergarten_details_lieblingsgericht">Lieblingsgericht:</string>
    <string name="txt_biergarten_details_speisenkommentar">Speisenkommentar:</string>
    <string name="txt_biergarten_eintragen_name">Name</string>
    <string name="txt_biergarten_eintragen_strasse">Strasse:</string>
    <string name="txt_biergarten_eintragen_plz">Plz:</string>
    <string name="txt_biergarten_eintragen_ort">Ort:</string>
    <string name="txt_biergarten_eintragen_telefon">Telefon:</string>
    <string name="txt_biergarten_eintragen_email">Email:</string>
    <string name="txt_biergarten_eintragen_url">URL:</string>
    <string name="txt_biergarten_eintragen_latitude">Longitude:</string>
    <string name="txt_biergarten_eintragen_longitude">Latitude:</string>
    <string name="txt_biergarten_eintragen_desc">Info:</string>
    <string name="txt_biergarten_finden_name">Andresse:</string>
    <string name="btn_biergarten_suchen">Suchen</string>
    <string name="btn_biergarten_eintragen">Eintragen</string>
    <string name="opt_biergarten_finden_route">Route</string>
    <string name="opt_biergarten_finden_uebernehmen">Übernehmen</string>
</resources>
