<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bayerflagge_480x800_ohne_alles"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_biergarten_eintragen_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/txt_biergarten_eintragen_title"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten"
            android:textColor="@color/color_black"
            android:textSize="30dip"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >

        <TextView
            android:id="@+id/txt_biergarten_eintragen_name"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_name"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />

        <EditText
            android:id="@+id/edt_biergarten_eintragen_name"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >

        <TextView
            android:id="@+id/txt_biergarten_eintragen_strasse"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_strasse"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />


        <EditText
            android:id="@+id/edt_biergarten_eintragen_strasse"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >
        <TextView
            android:id="@+id/txt_biergarten_eintragen_plz"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_plz"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />

        <EditText
            android:id="@+id/edt_biergarten_eintragen_plz"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >
        <TextView
            android:id="@+id/txt_biergarten_eintragen_ort"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_ort"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />

        <EditText
            android:id="@+id/edt_biergarten_eintragen_ort"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >
        <TextView
            android:id="@+id/txt_biergarten_eintragen_telefon"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_telefon"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />


        <EditText
            android:id="@+id/edt_biergarten_eintragen_telefon"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPhonetic"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >
        <TextView
            android:id="@+id/txt_biergarten_eintragen_email"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_email"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />


        <EditText
            android:id="@+id/edt_biergarten_eintragen_email"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >

        <TextView
            android:id="@+id/txt_biergarten_eintragen_url"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_url"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />


        <EditText
            android:id="@+id/edt_biergarten_eintragen_url"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textUri"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >



        <TextView
            android:id="@+id/txt_biergarten_eintragen_desc"
            style="@style/Widget.TextView.TextViewStyle.Biergarten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/txt_biergarten_eintragen_desc"
            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />

        <EditText
            android:id="@+id/edt_biergarten_eintragen_desc"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" >


            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_biergarten_speichern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_biergarten_eintragen" />

</LinearLayout>