<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layout_gravity="center"    android:background="@drawable/hintergrund_1_400x800"    android:orientation="vertical" >
    <LinearLayout        android:id="@+id/linearLayout1"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="10dip"        android:layout_marginTop="160dip"        android:orientation="horizontal" >
        <TextView            android:id="@+id/txt_biergarten_getraenke_title"            android:layout_width="fill_parent"            android:layout_height="fill_parent"            android:layout_gravity="center_horizontal"            android:gravity="center_horizontal"            android:text="@string/txt_biergarten_getraenke_title"            android:textAppearance="?android:attr/textAppearanceLarge"            android:textColor="@color/color_black"            android:textSize="30dip"            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="20dip"        android:layout_marginLeft="40dip"        android:layout_marginRight="15dip"        android:layout_marginTop="20dip" >
        <TextView            android:id="@+id/txt_biergarten_details_biermarke"            style="@style/Widget.TextView.TextViewStyle.Biergarten"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginRight="5dip"            android:minWidth="95dip"            android:text="@string/txt_biergarten_details_biermarke"            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />
        <EditText            android:id="@+id/edt_biergarten_details_biermarke"            style="@style/Widget.EditText.EditTextStyle.Biergarten"            android:layout_width="0dip"            android:layout_height="wrap_content"            android:layout_weight="1"            android:inputType="text"            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />
    </LinearLayout>
    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="20dip"        android:layout_marginLeft="40dip"        android:layout_marginRight="15dip" >
        <TextView            android:id="@+id/txt_biergarten_details_mass"            style="@style/Widget.TextView.TextViewStyle.Biergarten"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginRight="5dip"            android:minWidth="95dip"            android:text="@string/txt_biergarten_details_mass"            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />
        <EditText
            android:id="@+id/edt_biergarten_details_mass"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginBottom="5dip"        android:layout_marginLeft="40dip"        android:layout_marginRight="15dip"        android:minWidth="90dip" >
        <TextView            android:id="@+id/txt_biergarten_details_apfelschorle"            style="@style/Widget.TextView.TextViewStyle.Biergarten"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginRight="5dip"            android:minWidth="95dip"            android:text="@string/txt_biergarten_details_apfelschorle"            android:textAppearance="@style/TextAppearance.Widget.TextViewStyle.Biergarten" />
        <EditText
            android:id="@+id/edt_biergarten_details_apfelschorle"
            style="@style/Widget.EditText.EditTextStyle.Biergarten"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Widget.EditTextStyle.Biergarten" />

    </LinearLayout>
    
</LinearLayout>